# ssb-konjunk

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  noxfile.py  personal-init.sh  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.md  reference.md  ssb_konjunk.rst
src/ssb_konjunk/: __init__.py  __main__.py  _functions.py  attachment.py  data_formating.py  fame.py  functions.py  general_utils.py  pendulum_functions.py  prompts.py  rounding.py  saving.py  skjema.py  statbank_format.py  testing_func.ipynb  timestamp.py  xml_handling.py
src/ssb_konjunk/components/: __init__.py  alert.py  card.py  figure.py  file_switcher.py  header.py  indirect.py  page_aio.py  table.py  table_card.py
src/ssb_konjunk/dash/: __init__.py  utils.py
src/ssb_konjunk/dash/assets/: indirect.css  kontroller.css  main.css  selector.css  visualize.css
src/ssb_konjunk/dash/calculations/: __init__.py  calc_data.py  helper_functions.py  period_utils.py
src/ssb_konjunk/dash/components/: __init__.py  alert.py  card.py  figure.py  file_switcher.py  gen_vis.py  header.py  header_nav.py  indirect.py  page_aio.py  table.py  table_card.py
src/ssb_konjunk/dash/components/internal/: __init__.py  data_source.py  graph_display.py  graph_settings_display.py  loading_test.py  series_selector.py  series_settings_display.py  tab_selector.py
tests/: __init__.py  test_data_formating.py  test_fame.py  test_functions.py  test_general_utils.py  test_main.py  test_prompts.py  test_rounding.py  test_saving.py  test_timestamp.py
tests/dash/: conftest.py  test_calc_data.py  test_helper_functions.py
