[project]
name = "ssb-konjunk"
version = "2.0.8"
description = "SSB Konjunk 422"
authors = [
    {name = "Johanne Saxegaard", email = "jox@ssb.no"}, 
    {name = "Halvor Steffenssen", email = "hvr@ssb.no"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
homepage = "https://github.com/statisticsnorway/ssb-konjunk"
repository = "https://github.com/statisticsnorway/ssb-konjunk"
documentation = "https://statisticsnorway.github.io/ssb-konjunk"

dependencies = [
    "click>=8.0.1",
    "pandas>=2.2.0",
    "pendulum>=3.0.0",
    "pandas-stubs>=2.2.2.240807",
    "urllib3>=2.6.3",
    "starlette>=0.52.1",
    "gcsfs>=2026.2.0",
]

[project.optional-dependencies]
dash = [
    "dash>=4.0.0",
    "plotly>=6.5.2",
    "ssb-dash-components>=0.11.1",
]

[dependency-groups]
lint = [
    "black[jupyter]>=25.11.0",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
    "pydoclint>=0.8.3",
    "ruff>=0.14.5",
]
doc = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-click>=6.1.0",
]

# Type hint stubs should be placed in the dev dependency group
dev = [
    {include-group = "lint"},
    {include-group = "doc"},
    "coverage[toml]>=7.11.3",
    "deptry>=0.24.0; python_version < '4.0'",
    "mypy>=1.18.2",
    "pygments>=2.19.0",
    "pytest>=9.0.0",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=1.3.0",
]

[tool.poetry]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.urls]
Changelog = "https://github.com/statisticsnorway/ssb-konjunk/releases"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.scripts]
ssb-konjunk = "ssb_konjunk.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ssb_konjunk", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.deptry.per_rule_ignores]
DEP001 = ["nox", "nox_poetry"]  # packages available by default

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "I",    # sort imports
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "FBT001", # Allow boolean positional arguments in a function.
    "FBT002", # Allow boolean default positional arguments in a function.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR2004", # Allow to compare with unnamed numerical constants.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
